# Event-based-sensor3

./: .gitignore  CMakeLists.txt  README.md  run_capture_image.bat
.github/workflows/: all_jobs.yaml  upload_win_binaries.yaml
cmake/: copy_evs_2ms_logger_runtime.cmake
cmake/custom_functions/: add_library_version_header.cmake
cmake/custom_targets/: create_metavision_open_archive_folder.cmake
hal_psee_plugins/: CMakeLists.txt
hal_psee_plugins/apps/: CMakeLists.txt
samples/: CMakeLists.txt
samples/capture_image/: CMakeLists.txt  capture_image.cpp
standalone_samples/: CMakeLists.txt
standalone_samples/evs_2ms_logger/: evs_2ms_logger.cpp
utils/containers/: Dockerfile.OpenEB
utils/python/: requirements_openeb.txt  requirements_pytorch_cpu.txt  requirements_pytorch_cuda.txt
utils/python/metavision_utils/: shell_tools.py
utils/windows/11/: vcpkg-openeb.json
work_evs_2ms_logger/: README.md  run_evs_2ms_logger.bat
work_evs_2ms_logger/output/1000Hz/: frame_000001_t0_3141660396us.txt  frame_000002_t0_3141662396us.txt  frame_000003_t0_3141664396us.txt  frame_000004_t0_3141666396us.txt  frame_000005_t0_3141668396us.txt  frame_000006_t0_3141670396us.txt  frame_000007_t0_3141672396us.txt  frame_000008_t0_3141674396us.txt  frame_000009_t0_3141676396us.txt  frame_000010_t0_3141678396us.txt  frame_000011_t0_3141680396us.txt  frame_000012_t0_3141682396us.txt  frame_000013_t0_3141684396us.txt  frame_000014_t0_3141686396us.txt  frame_000015_t0_3141688396us.txt  frame_000016_t0_3141690396us.txt  frame_000017_t0_3141692396us.txt  frame_000018_t0_3141694396us.txt  (+44 more)
(+27658 files in other folders)
